Swagger: setando ordem das tags para melhorar doc
